cmake_minimum_required(VERSION 3.15)

add_library(vroom STATIC
    algorithms/heuristics/heuristics.cpp
    algorithms/local_search/local_search.cpp
    algorithms/local_search/operator.cpp
    algorithms/validation/check.cpp
    algorithms/validation/choose_ETA.cpp
    problems/cvrp/operators/cross_exchange.cpp
    problems/cvrp/operators/intra_cross_exchange.cpp
    problems/cvrp/operators/intra_exchange.cpp
    problems/cvrp/operators/intra_mixed_exchange.cpp
    problems/cvrp/operators/intra_or_opt.cpp
    problems/cvrp/operators/intra_relocate.cpp
    problems/cvrp/operators/mixed_exchange.cpp
    problems/cvrp/operators/or_opt.cpp
    problems/cvrp/operators/pd_shift.cpp
    problems/cvrp/operators/relocate.cpp
    problems/cvrp/operators/reverse_two_opt.cpp
    problems/cvrp/operators/route_exchange.cpp
    problems/cvrp/operators/swap_star.cpp
    problems/cvrp/operators/two_opt.cpp
    problems/cvrp/operators/unassigned_exchange.cpp
    problems/cvrp/cvrp.cpp
    problems/tsp/heuristics/christofides.cpp
    problems/tsp/heuristics/local_search.cpp
    problems/tsp/heuristics/christofides.cpp
    problems/tsp/tsp.cpp
    problems/vrptw/operators/cross_exchange.cpp
    problems/vrptw/operators/intra_cross_exchange.cpp
    problems/vrptw/operators/intra_exchange.cpp
    problems/vrptw/operators/intra_mixed_exchange.cpp
    problems/vrptw/operators/intra_or_opt.cpp
    problems/vrptw/operators/intra_relocate.cpp
    problems/vrptw/operators/mixed_exchange.cpp
    problems/vrptw/operators/or_opt.cpp
    problems/vrptw/operators/pd_shift.cpp
    problems/vrptw/operators/relocate.cpp
    problems/vrptw/operators/reverse_two_opt.cpp
    problems/vrptw/operators/route_exchange.cpp
    problems/vrptw/operators/swap_star.cpp
    problems/vrptw/operators/two_opt.cpp
    problems/vrptw/operators/unassigned_exchange.cpp
    problems/vrptw/vrptw.cpp
    problems/vrp.cpp
    routing/http_wrapper.cpp
    routing/ors_wrapper.cpp
    routing/osrm_routed_wrapper.cpp
    routing/valhalla_wrapper.cpp
    structures/generic/edge.cpp
    structures/generic/matrix.cpp
    structures/generic/undirected_graph.cpp
    structures/vroom/input/input.cpp
    structures/vroom/input/vehicle_step.cpp
    structures/vroom/solution/computing_times.cpp
    structures/vroom/solution/route.cpp
    structures/vroom/solution/solution.cpp
    structures/vroom/solution/step.cpp
    structures/vroom/solution/summary.cpp
    structures/vroom/solution/violations.cpp
    structures/vroom/break.cpp
    structures/vroom/cost_wrapper.cpp
    structures/vroom/job.cpp
    structures/vroom/location.cpp
    structures/vroom/raw_route.cpp
    structures/vroom/solution_state.cpp
    structures/vroom/time_window.cpp
    structures/vroom/tw_route.cpp
    structures/vroom/vehicle.cpp
    structures/cl_args.cpp
    utils/exception.cpp
    utils/input_parser.cpp
    utils/output_json.cpp
    utils/version.cpp)

target_include_directories(vroom
    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>)
